--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     A downloadable and runnable .jar file is available <a href="http://tyoverby.com/LogicEvaluator/logic_parser.jar">here</a>
                     </p>
                     <p>
+                    Please notify me of any bugs.
                     Email me at ty@pre-alpha.com.
                     </p>
                 </td>
