added warning and example formula

--- a/index.html
+++ b/index.html
@@ -21,8 +21,15 @@
                     It will only accept well-formed-formulas.
                     </p>
                     <p>
+                    An example formula looks something like <code>(P & ~(Q | R))</code>
+                    </p>
+                    <p>
                     Source is available <a href="https://github.com/TyOverby/LogicEvaluator">here</a>.
                     A downloadable and runnable .jar file is available <a href="http://tyoverby.com/LogicEvaluator/logic_parser.jar">here</a>
+                    </p>
+                    <p>
+                        Please note: If you use <code>n</code> letter variables, you are generating <code>2^n</code> lines.
+                        Don't expect this program to perform well if you end up using all the letters in the alphabet.
                     </p>
                     <p>
                     Please notify me of any bugs.
